--- a/report.tex
+++ b/report.tex
@@ -42,7 +42,8 @@
 
 %TC:ignore
 \include{chapters/21_bibliography}
-\include{chapters/22_appendices}
+% Use `input` for finer granularity `include`s whilst avoiding nesting
+\input{chapters/22_appendices}
 %TC:endignore
 
 \end{document}
