--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,7 @@
 \newcommand{\course}{Master of Philosophy in Advanced Computer Science}
 
 \input{chapters/00_preamble}
+\input{chapters/01_glossary}
 
 % Select which version this is:
 % For the (anonymous) submission (without your name or acknowledgements)
@@ -19,14 +20,12 @@
 
 %TC:ignore
 \pagenumbering{gobble}
-\include{chapters/01_titlepage}
-\include{chapters/02_coverpage}
-\include{chapters/03_abstract}
-\include{chapters/04_acknowledgements}
+\include{chapters/02_titlepage}
+\include{chapters/03_coverpage}
+\include{chapters/04_abstract}
+\include{chapters/05_acknowledgements}
 \pagenumbering{roman}
-\include{chapters/05_contents}
-\include{chapters/06_glossary}
-\include{chapters/07_elements}
+\include{chapters/06_frontmatter}
 \pagenumbering{arabic}
 %TC:endignore
 
