--- a/report.tex
+++ b/report.tex
@@ -30,6 +30,7 @@
 %TC:endignore
 
 \label{firstcontentpage} % start page count here
+\zlabel{firstpdfcontentpage}
 \include{chapters/10_introduction}
 \include{chapters/11_background}
 \include{chapters/12_related_work}
@@ -40,6 +41,7 @@
 \include{chapters/17_impact_dynamism}
 \include{chapters/18_summary_conclusions}
 \label{lastcontentpage} % end page count here
+\zlabel{lastpdfcontentpage}
 
 %TC:ignore
 \include{chapters/20_bibliography}
