Staging commit before new graphs

--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,22 @@
 \documentclass[12pt,a4paper,twoside]{report}
 
-\title{Rewriting the Rewriter: Dynamic Optimizations of User-extensible Compiler Infrastructure}
+% \title{Performance profiling and optimisation of the xDSL compiler framework}
+% \title{Rewriting the Rewriter: Dynamic Optimizations of User-extensible Compiler Infrastructure}
+% \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
+% \title{A Necessary Evil? Dynamism in User-extensible Compiler Infrastructure}
+% \title{Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
+% \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
+% \title{Leveraging Dynamism in User-extensible Compiler Infrastructure}
+% \title{Dynamic by Definition: Re-thinking Language Choice in User-extensible Compiler Infrastructure}
+% \title{Embracing the Dynamic Nature of User-extensible Compiler Infrastructure}
+% \title{Beyond Static Boundaries: Performance and Flexibility in Dynamic Compiler Frameworks}
+% \title{Dynamic Foundations: Reconsidering Performance Trade-offs in Compiler Infrastructure}
+% \title{Breaking the Static Paradigm: The Case for Dynamism in Compiler Framework Design}
+\title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
+
 \author{Edmund Goodman}
 \date{\today}
-\newcommand{\candidatenumber}{1234N}
+\newcommand{\candidatenumber}{9606J}
 \newcommand{\college}{Clare College}
 \newcommand{\course}{Master of Philosophy in Advanced Computer Science}
 
