--- a/references.bib
+++ b/references.bib
@@ -171,6 +171,23 @@
   file = {/Users/edjg/Zotero/storage/W2EIY5QW/Crapé - Performance analysis and benchmarking of python.pdf}
 }
 
+@article{curtsingerSTABILIZERStatisticallySound2013,
+  title = {{{STABILIZER}}: Statistically Sound Performance Evaluation},
+  shorttitle = {{{STABILIZER}}},
+  author = {Curtsinger, Charlie and Berger, Emery D.},
+  date = {2013-03-16},
+  journaltitle = {SIGARCH Comput. Archit. News},
+  volume = {41},
+  number = {1},
+  pages = {219--228},
+  issn = {0163-5964},
+  doi = {10.1145/2490301.2451141},
+  url = {https://dl.acm.org/doi/10.1145/2490301.2451141},
+  urldate = {2025-01-29},
+  abstract = {Researchers and software developers require effective performance evaluation. Researchers must evaluate optimizations or measure overhead. Software developers use automatic performance regression tests to discover when changes improve or degrade performance. The standard methodology is to compare execution times before and after applying changes.Unfortunately, modern architectural features make this approach unsound. Statistically sound evaluation requires multiple samples to test whether one can or cannot (with high confidence) reject the null hypothesis that results are the same before and after. However, caches and branch predictors make performance dependent on machine-specific parameters and the exact layout of code, stack frames, and heap objects. A single binary constitutes just one sample from the space of program layouts, regardless of the number of runs. Since compiler optimizations and code changes also alter layout, it is currently impossible to distinguish the impact of an optimization from that of its layout effects.This paper presents Stabilizer, a system that enables the use of the powerful statistical techniques required for sound performance evaluation on modern architectures. Stabilizer forces executions to sample the space of memory configurations by repeatedly re-randomizing layouts of code, stack, and heap objects at runtime. Stabilizer thus makes it possible to control for layout effects. Re-randomization also ensures that layout effects follow a Gaussian distribution, enabling the use of statistical tests like ANOVA. We demonstrate Stabilizer's efficiency (\&lt;7\% median overhead) and its effectiveness by evaluating the impact of LLVM's optimizations on the SPEC CPU2006 benchmark suite. We find that, while -O2 has a significant impact relative to -O1, the performance impact of -O3 over -O2 optimizations is indistinguishable from random noise.},
+  file = {/Users/edjg/Zotero/storage/P6T7ZTT6/Curtsinger and Berger - 2013 - STABILIZER statistically sound performance evaluation.pdf}
+}
+
 @unpublished{emerybergerPythonPerformanceMatters2022,
   title = {"{{Python Performance Matters}}" by {{Emery Berger}} ({{Strange Loop}} 2022)},
   author = {{Emery Berger}},
