Continue work on measurement section

--- a/references.bib
+++ b/references.bib
@@ -111,6 +111,23 @@
   file = {/Users/edjg/Zotero/storage/2PSMWKHJ/Berger et al. - 2023 - Triangulating Python Performance Issues with SCALENE .pdf}
 }
 
+@inproceedings{callahanInterproceduralConstantPropagation1986,
+  title = {Interprocedural Constant Propagation},
+  booktitle = {Proceedings of the 1986 {{SIGPLAN}} Symposium on {{Compiler}} Construction},
+  author = {Callahan, David and Cooper, Keith D. and Kennedy, Ken and Torczon, Linda},
+  date = {1986-07-01},
+  series = {{{SIGPLAN}} '86},
+  pages = {152--161},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/12276.13327},
+  url = {https://dl.acm.org/doi/10.1145/12276.13327},
+  urldate = {2025-05-16},
+  abstract = {In a compiling system that attempts to improve code for a whole program by optimizing across procedures, the compiler can generate better code for a specific procedure if it knows which variables will have constant values, and what those values will be, when the procedure is invoked. This paper presents a general algorithm for determining for each procedure in a given program the set of inputs that will have known constant values at run time. The precision of the answers provided by this method are dependent on the precision of the local analysis of individual procedures in the program. Since the algorithm is intended for use in a sophisticated software development environment in which local analysis would be provided by the source editor, the quality of the answers will depend on the amount of work the editor performs. Several reasonable strategies for local analysis with different levels of complexity and precision are suggested and the results of a prototype implementation in a vectorizing Fortran compiler are presented.},
+  isbn = {978-0-89791-197-9},
+  file = {/Users/edjg/Zotero/storage/N39QA3AE/Callahan et al. - 1986 - Interprocedural constant propagation.pdf}
+}
+
 @incollection{chatleyNext7000Programming2019,
   title = {The {{Next}} 7000 {{Programming Languages}}},
   booktitle = {Computing and {{Software Science}}: {{State}} of the {{Art}} and {{Perspectives}}},
@@ -480,6 +497,14 @@
   file = {/Users/edjg/Zotero/storage/7CTJVHTF/Saavedra and Smith - 1995 - Performance characterization of optimizing compilers.pdf}
 }
 
+@article{sabne2020xla,
+  title = {{{XLA}}: {{Compiling}} Machine Learning for Peak Performance},
+  author = {Sabne, Amit},
+  date = {2020},
+  journaltitle = {Google Research},
+  url = {https://openxla.org/}
+}
+
 @thesis{saeed2008systematic,
   type = {phdthesis},
   title = {Systematic Review of Verification \& Validation in Dynamic Languages},
@@ -507,6 +532,23 @@
   file = {/Users/edjg/Zotero/storage/CDD4PU2J/Steele - 1977 - Debunking the “expensive procedure call” myth or, procedure call implementations considered harmful.pdf}
 }
 
+@inproceedings{stoltzConstantPropagationFresh1994,
+  title = {Constant Propagation: A Fresh, Demand-Driven Look},
+  shorttitle = {Constant Propagation},
+  booktitle = {Proceedings of the 1994 {{ACM}} Symposium on {{Applied}} Computing},
+  author = {Stoltz, Eric and Wolfe, Michael and Gerlek, Michael P.},
+  date = {1994-04-06},
+  series = {{{SAC}} '94},
+  pages = {400--404},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/326619.326791},
+  url = {https://dl.acm.org/doi/10.1145/326619.326791},
+  urldate = {2025-05-16},
+  isbn = {978-0-89791-647-9},
+  file = {/Users/edjg/Zotero/storage/6WAK9W8U/Stoltz et al. - 1994 - Constant propagation a fresh, demand-driven look.pdf}
+}
+
 @online{tomdaleAdventuresMicrobenchmarking2017,
   title = {Adventures in {{Microbenchmarking}}},
   author = {{Tom Dale}},
@@ -515,6 +557,17 @@
   urldate = {2025-04-24},
   organization = {tomdale.net},
   file = {/Users/edjg/Zotero/storage/LRBUXXIR/adventures-in-microbenchmarking.html}
+}
+
+@software{vaivaswathanagarajVaivaswathaPliron2025,
+  title = {Vaivaswatha/Pliron},
+  author = {{Vaivaswatha Nagaraj}},
+  date = {2025-05-16T23:51:15Z},
+  origdate = {2022-08-04T14:03:33Z},
+  url = {https://github.com/vaivaswatha/pliron},
+  urldate = {2025-05-17},
+  abstract = {An Extensible Compiler IR Framework},
+  keywords = {compilers,ir,mlir,programming-languages}
 }
 
 @online{victorstinnerMyJourneyStable2016,
