--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,26 @@
+@online{0xecCodingReversingHacking2017,
+  title = {Coding | {{Reversing}}: {{Hacking}} the {{CPython}} Virtual Machine to Support Bytecode Debugging},
+  shorttitle = {Coding | {{Reversing}}},
+  author = {{0xec}},
+  date = {2017-03-16},
+  url = {https://0xec.blogspot.com/2017/03/hacking-cpython-virtual-machine-to.html},
+  urldate = {2025-05-17},
+  organization = {Coding | Reversing},
+  keywords = {debugging,pjorion,programming,python},
+  file = {/Users/edjg/Zotero/storage/L42GUFUD/hacking-cpython-virtual-machine-to.html}
+}
+
+@software{0xecExtremecodersreBytecode_tracer2024,
+  title = {Extremecoders-Re/Bytecode\_tracer},
+  author = {{0xec} and {Dominik Moritz}},
+  date = {2024-07-27T13:04:29Z},
+  origdate = {2017-03-16T08:04:02Z},
+  url = {https://github.com/extremecoders-re/bytecode_tracer},
+  urldate = {2025-05-17},
+  abstract = {Tracing execution of python bytecode},
+  keywords = {debugging,python,python-2-7,reverse-engineering,tracing}
+}
+
 @book{alfred2007compilers,
   title = {Compilers: {{Principles}}, {{Techniques}} \& {{Tools}}},
   author = {Alfred, V Aho and Monica, S Lam and Jeffrey, D Ullman},
@@ -146,6 +169,14 @@
   file = {/Users/edjg/Zotero/storage/8ZWWCKTL/Chatley et al. - 2019 - The Next 7000 Programming Languages.pdf}
 }
 
+@online{clementrouaultUnderstandingPythonExecution,
+  title = {Understanding {{Python}} Execution from inside: {{A Python}} Assembly Tracer - {{Hakril}}'s Blog},
+  author = {{Clement Rouault}},
+  url = {https://blog.hakril.net/articles/2-understanding-python-execution-tracer.html},
+  urldate = {2025-05-17},
+  file = {/Users/edjg/Zotero/storage/Q3ISCLWL/2-understanding-python-execution-tracer.html}
+}
+
 @software{collinwinterPythonPyperformance2025,
   title = {Python/Pyperformance},
   author = {{Collin Winter} and {Jeffrey Yasskin}},
@@ -203,6 +234,18 @@
   urldate = {2025-01-29},
   abstract = {Researchers and software developers require effective performance evaluation. Researchers must evaluate optimizations or measure overhead. Software developers use automatic performance regression tests to discover when changes improve or degrade performance. The standard methodology is to compare execution times before and after applying changes.Unfortunately, modern architectural features make this approach unsound. Statistically sound evaluation requires multiple samples to test whether one can or cannot (with high confidence) reject the null hypothesis that results are the same before and after. However, caches and branch predictors make performance dependent on machine-specific parameters and the exact layout of code, stack frames, and heap objects. A single binary constitutes just one sample from the space of program layouts, regardless of the number of runs. Since compiler optimizations and code changes also alter layout, it is currently impossible to distinguish the impact of an optimization from that of its layout effects.This paper presents Stabilizer, a system that enables the use of the powerful statistical techniques required for sound performance evaluation on modern architectures. Stabilizer forces executions to sample the space of memory configurations by repeatedly re-randomizing layouts of code, stack, and heap objects at runtime. Stabilizer thus makes it possible to control for layout effects. Re-randomization also ensures that layout effects follow a Gaussian distribution, enabling the use of statistical tests like ANOVA. We demonstrate Stabilizer's efficiency (\&lt;7\% median overhead) and its effectiveness by evaluating the impact of LLVM's optimizations on the SPEC CPU2006 benchmark suite. We find that, while -O2 has a significant impact relative to -O1, the performance impact of -O3 over -O2 optimizations is indistinguishable from random noise.},
   file = {/Users/edjg/Zotero/storage/P6T7ZTT6/Curtsinger and Berger - 2013 - STABILIZER statistically sound performance evaluation.pdf}
+}
+
+@online{dangohmanCanonicalization2018,
+  title = {Canonicalization},
+  author = {{Dan Gohman}},
+  date = {2018-10-22T00:00:00+00:00},
+  url = {https://sunfishcode.github.io/blog/2018/10/22/Canonicalization.html},
+  urldate = {2025-05-17},
+  abstract = {Canonicalization},
+  langid = {american},
+  organization = {sunfishcode.github.io},
+  file = {/Users/edjg/Zotero/storage/PTHTQWMD/Canonicalization.html}
 }
 
 @unpublished{emerybergerPythonPerformanceMatters2022,
@@ -335,6 +378,14 @@
   file = {/Users/edjg/Zotero/storage/C65BSPZP/Kempen et al. - 2025 - It's Not Easy Being Green On the Energy Efficiency of Programming Languages.pdf;/Users/edjg/Zotero/storage/WLEKD4IA/2410.html}
 }
 
+@online{kunalbhallaUnreasonableEffectivenessSyssettrace,
+  title = {The Unreasonable Effectiveness of Sys.Settrace (and Sys.Setprofile)},
+  author = {{Kunal Bhalla}},
+  url = {https://explog.in/notes/settrace.html},
+  urldate = {2025-05-17},
+  file = {/Users/edjg/Zotero/storage/YS9NUUL8/settrace.html}
+}
+
 @inproceedings{laaberEvaluationOpensourceSoftware2018,
   title = {An Evaluation of Open-Source Software Microbenchmark Suites for Continuous Performance Assessment},
   booktitle = {Proceedings of the 15th {{International Conference}} on {{Mining Software Repositories}}},
@@ -462,6 +513,30 @@
   file = {/Users/edjg/Zotero/storage/F3EKI2E6/docs.html}
 }
 
+@online{nedbatchelderWickedHackPython2008,
+  title = {Wicked Hack: {{Python}} Bytecode Tracing},
+  shorttitle = {Wicked Hack},
+  author = {{Ned Batchelder}},
+  date = {2008-04-11T07:25:34},
+  url = {https://nedbatchelder.com/blog/200804/wicked_hack_python_bytecode_tracing.html},
+  urldate = {2025-05-17},
+  abstract = {Something I’ve been noodling on since PyCon is how to improve code coverage testing in Python, in particular, finding a way to measure bytecode execution instead of just line execution. After a fruitful investigation, I know a lot more about how CPython executes code, and I’ve found a way to trace each bytecode.},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/X52F35FA/wicked_hack_python_bytecode_tracing.html}
+}
+
+@online{neilconwayNumbersEveryoneShould2009,
+  title = {Numbers {{Everyone Should Know}}},
+  author = {{Neil Conway}},
+  date = {2009-10-17T22:20:20+00:00},
+  url = {https://everythingisdata.wordpress.com/2009/10/17/numbers-everyone-should-know/},
+  urldate = {2025-05-17},
+  abstract = {When you’re designing a performance-sensitive computer system, it is important to have an intuition for the relative costs of different operations. How much does a network I/O cost, compared …},
+  langid = {english},
+  organization = {Everything is Data},
+  file = {/Users/edjg/Zotero/storage/K55IK6MP/numbers-everyone-should-know.html}
+}
+
 @report{pep659,
   type = {PEP},
   title = {Specializing {{Adaptive Interpreter}}},
@@ -512,6 +587,14 @@
   date = {2008},
   institution = {MS. Thesis, Blekinge Institute of Technology, Sweden},
   file = {/Users/edjg/Zotero/storage/AUBRPYLN/Saeed and Saeed - 2008 - Systematic review of verification & validation in dynamic languages.pdf}
+}
+
+@online{sergegueltonBuildingObfuscatedPython,
+  title = {Building an Obfuscated {{Python}} Interpreter: We Need More Opcodes - {{Quarkslab}}'s Blog},
+  author = {{Serge Guelton}},
+  url = {https://blog.quarkslab.com/building-an-obfuscated-python-interpreter-we-need-more-opcodes.html},
+  urldate = {2025-05-17},
+  file = {/Users/edjg/Zotero/storage/VGXSZTRB/building-an-obfuscated-python-interpreter-we-need-more-opcodes.html}
 }
 
 @inproceedings{steeleDebunkingExpensiveProcedure1977,
