--- a/report.tex
+++ b/report.tex
@@ -2,17 +2,19 @@
 
 % \title{Performance profiling and optimisation of the xDSL compiler framework}
 % \title{Rewriting the Rewriter: Dynamic Optimizations of User-extensible Compiler Infrastructure}
-% \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
 % \title{A Necessary Evil? Dynamism in User-extensible Compiler Infrastructure}
 % \title{Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
-% \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 % \title{Leveraging Dynamism in User-extensible Compiler Infrastructure}
 % \title{Dynamic by Definition: Re-thinking Language Choice in User-extensible Compiler Infrastructure}
 % \title{Embracing the Dynamic Nature of User-extensible Compiler Infrastructure}
 % \title{Beyond Static Boundaries: Performance and Flexibility in Dynamic Compiler Frameworks}
 % \title{Dynamic Foundations: Reconsidering Performance Trade-offs in Compiler Infrastructure}
 % \title{Breaking the Static Paradigm: The Case for Dynamism in Compiler Framework Design}
-\title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
+% \title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
+%
+\title{Dynamism in User-extensible Compiler Infrastructure}
+% \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
+% \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 
 \author{Edmund Goodman}
 \date{\today}
@@ -45,12 +47,12 @@
 \label{firstcontentpage} % start page count here
 \include{chapters/10_introduction}
 \include{chapters/11_background}
-\include{chapters/12_related_work}
-\include{chapters/13_measuring_compiler_performance}
-\include{chapters/14_profiling_python_bytecode}
-\include{chapters/15_specialising_optimising_xdsl_rewriting}
-\include{chapters/16_impact_cpython_optimisations}
-\include{chapters/17_impact_dynamism}
+\include{chapters/12_measuring_compiler_performance}
+\include{chapters/13_profiling_python_bytecode}
+\include{chapters/14_specialising_optimising_xdsl_rewriting}
+\include{chapters/15_impact_cpython_optimisations}
+\include{chapters/16_impact_dynamism}
+\include{chapters/17_related_work}
 \include{chapters/18_summary_conclusions}
 \label{lastcontentpage} % end page count here
 
