--- a/report.tex
+++ b/report.tex
@@ -12,7 +12,8 @@
 % \title{Breaking the Static Paradigm: The Case for Dynamism in Compiler Framework Design}
 % \title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
 %
-\title{A Contradiction in Terms? Performance and Dynamism in User-extensible Compiler Infrastructures}
+% \title{A Contradiction in Terms? Performance and Dynamism in User-extensible Compiler Infrastructures}
+\title{On Performance and Dynamism in User-extensible Compiler Infrastructures}
 % \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
 % \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 
