Work on bytecode profiling chapter

--- a/references.bib
+++ b/references.bib
@@ -653,6 +653,15 @@
   keywords = {compilers,ir,mlir,programming-languages}
 }
 
+@online{victorskvortsovPythonScenes42020,
+  title = {Python behind the Scenes \#4: How {{Python}} Bytecode Is Executed},
+  author = {{Victor Skvortsov}},
+  date = {2020-10-30},
+  url = {https://tenthousandmeters.com/blog/python-behind-the-scenes-4-how-python-bytecode-is-executed/},
+  urldate = {2025-05-27},
+  file = {/Users/edjg/Zotero/storage/ZN95JZGJ/python-behind-the-scenes-4-how-python-bytecode-is-executed.html}
+}
+
 @online{victorstinnerMyJourneyStable2016,
   title = {My Journey to Stable Benchmark, Part 1 (System)},
   author = {{Victor Stinner}},
