Rework bits of template and move stuff around

--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 % \title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
 %
 % \title{A Contradiction in Terms? Performance and Dynamism in User-extensible Compiler Infrastructures}
-\title{On Performance and Dynamism in User-extensible Compiler Infrastructures}
+\title{Performance and Dynamism in User-extensible Compiler Infrastructures}
 % \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
 % \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 
@@ -22,6 +22,7 @@
 \newcommand{\candidatenumber}{9606J}
 \newcommand{\college}{Clare College}
 \newcommand{\course}{Master of Philosophy in Advanced Computer Science}
+\newcommand{\wordcount}{8949}
 
 \input{chapters/00_preamble}
 \input{chapters/01_glossary}
@@ -29,7 +30,7 @@
 % Select which version this is:
 % For the (anonymous) submission (without your name or acknowledgements)
 % uncomment the following line (or let the makefile do this for you)
-%\submissiontrue
+\submissiontrue
 % For the final version (with your name) leave the above commented.
 
 \begin{document}
