Final stretch of profiling chapter

--- a/references.bib
+++ b/references.bib
@@ -55,6 +55,17 @@
   venue = {Vienna, Austria}
 }
 
+@online{appleinc.Mach_absolute_time,
+  title = {Mach\_absolute\_time},
+  author = {{Apple Inc.}},
+  url = {https://developer.apple.com/documentation/kernel/1462446-mach_absolute_time},
+  urldate = {2025-05-28},
+  abstract = {Returns current value of a clock that increments monotonically in tick units (starting at an arbitrary point), this clock does not increment while the system is asleep.},
+  langid = {american},
+  organization = {Apple Developer Documentation},
+  file = {/Users/edjg/Zotero/storage/JR5TLPBR/1462446-mach_absolute_time.html}
+}
+
 @article{aycockBriefHistoryJustintime2003,
   title = {A Brief History of Just-in-Time},
   author = {Aycock, John},
@@ -553,6 +564,50 @@
   date = {2024},
   number = {744},
   url = {https://peps.python.org/pep-0744/}
+}
+
+@online{pythonsoftwarefoundationPythonProfilers,
+  title = {The {{Python Profilers}}},
+  author = {{Python Software Foundation}},
+  url = {https://docs.python.org/3/library/profile.html},
+  urldate = {2025-05-28},
+  abstract = {Source code: Lib/profile.py and Lib/pstats.py Introduction to the profilers: cProfile and profile provide deterministic profiling of Python programs. A profile is a set of statistics that describes...},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/V69P47SH/profile.html}
+}
+
+@online{pythonsoftwarefoundationTimeitMeasureExecution,
+  title = {Timeit — {{Measure}} Execution Time of Small Code Snippets},
+  author = {{Python Software Foundation}},
+  url = {https://docs.python.org/3/library/timeit.html},
+  urldate = {2025-05-28},
+  abstract = {Source code: Lib/timeit.py This module provides a simple way to time small bits of Python code. It has both a Command-Line Interface as well as a callable one. It avoids a number of common traps fo...},
+  langid = {english},
+  organization = {Python documentation},
+  file = {/Users/edjg/Zotero/storage/HDM73KJL/timeit.html}
+}
+
+@software{rickerbyPyinstrument2025,
+  title = {Pyinstrument},
+  author = {Rickerby, Joe},
+  date = {2025-05-28T17:17:39Z},
+  origdate = {2014-03-13T17:53:13Z},
+  url = {https://github.com/joerick/pyinstrument},
+  urldate = {2025-05-28},
+  abstract = {🚴~Call stack profiler for Python. Shows you why your code is slow!},
+  keywords = {async,django,performance,profile,profiler,python}
+}
+
+@software{robertkernPyutilsLine_profiler2025,
+  title = {Pyutils/Line\_profiler},
+  author = {{Robert Kern} and {Jon Crall}},
+  date = {2025-05-28T09:11:49Z},
+  origdate = {2019-12-10T22:26:33Z},
+  url = {https://github.com/pyutils/line_profiler},
+  urldate = {2025-05-28},
+  abstract = {Line-by-line profiling for Python},
+  organization = {OpenPyUtils}
 }
 
 @article{saavedraPerformanceCharacterizationOptimizing1995,
