Updates from Overleaf

--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 % \title{Beyond Static Boundaries: Inherent and Extraneous Dynamism in User-extensible Compiler Infrastructure}
 %
 % \title{A Contradiction in Terms? Performance and Dynamism in User-extensible Compiler Infrastructures}
-\title{On Performance and Dynamism in User-extensible Compiler Infrastructures}
+\title{Performance and Dynamism in User-extensible Compiler Infrastructures}
 % \title{Optimising Dynamism in User-extensible Compiler Infrastructure}
 % \title{The Cost of Dynamism in User-extensible Compiler Infrastructure}
 
