Continue work on specialising chapt

--- a/references.bib
+++ b/references.bib
@@ -708,6 +708,15 @@
   keywords = {compilers,ir,mlir,programming-languages}
 }
 
+@online{valgrindtmdevelopersCallgrindCallgraphGenerating,
+  title = {Callgrind: A Call-Graph Generating Cache and Branch Prediction Profiler},
+  author = {{Valgrind™ Developers}},
+  url = {https://valgrind.org/docs/manual/cl-manual.html},
+  urldate = {2025-05-29},
+  organization = {Valgrind},
+  file = {/Users/edjg/Zotero/storage/VKF6SIAI/cl-manual.html}
+}
+
 @online{victorskvortsovPythonScenes42020,
   title = {Python behind the Scenes \#4: How {{Python}} Bytecode Is Executed},
   author = {{Victor Skvortsov}},
